# TDD-Project

./: .env  .pre-commit-config.yaml  MakeFile  docker-compose.yml  pyproject.toml
store/: main.py
store/controllers/: product.py
store/core/: config.py  exceptions.py
store/db/: mongo.py
store/models/: base.py
store/schemas/: __init__.py  base.py  product.py
store/usecases/: produc.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
